--- a/app/src/main/res/layout/activity_show_workout.xml
+++ b/app/src/main/res/layout/activity_show_workout.xml
@@ -15,15 +15,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:elevation="2dp"
             android:orientation="vertical"
             android:padding="8dp"
             android:paddingTop="4dp"
             android:paddingBottom="8dp">
-
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="32dp" />
 
             <TextView
                 android:id="@+id/text_show_workout_name"
